[package]
name = "hydration-solver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hydration-solver"
path = "src/bin/main.rs"

[dependencies]
#tracing = {workspace = true}
clarabel = "0.9.0"
highs = "1.6.1"
ndarray = "0.16.1"
float_next_after= "1.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.117"
chrono = "0.4.19"
anyhow = "1.0.96"
rand = { version = "0.8.5" }

[features]
default = [
]
